# deploy-guard

./: .deploy-guard.yml  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
hooks/: github-action.yml  pre-push
rules/: lgpd-tests.yml  lgpd.yml
src/deploy_guard/: __init__.py  __main__.py  cli.py  config.py  git_scanner.py  known_safe.py  models.py  patterns.py  pdf_scanner.py  scanner.py  validators.py
src/deploy_guard/formatters/: __init__.py  html.py  json_fmt.py  sarif.py  terminal.py
tests/: scenario-1-github-actions.yml  scenario-2-vercel-nextjs.env  scenario-3-aws-terraform.tf  scenario-4-docker-compose.yml  scenario-5-frontend-bundle.js  scenario-6-clean-backend.js  scenario-7-production-dump.sql  test_cli.py  test_formatters.py  test_lgpd_rules.py  test_scenarios.py  test_secrets.py  test_validators.py
