[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploy-guard"
version = "1.0.0"
description = "Pre-deploy security scanner with LGPD compliance — detects secrets, PII, and misconfigurations before they reach production."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Deploy Guard Contributors"},
]
keywords = [
    "security", "scanner", "lgpd", "secrets", "pii",
    "pre-deploy", "compliance", "devsecops", "sast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
deploy-guard = "deploy_guard.cli:cli"

[project.urls]
Homepage = "https://github.com/TiagoSchr/deploy-guard"
Documentation = "https://github.com/TiagoSchr/deploy-guard#readme"
Repository = "https://github.com/TiagoSchr/deploy-guard"
Issues = "https://github.com/TiagoSchr/deploy-guard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["deploy_guard"]

[tool.coverage.report]
show_missing = true
fail_under = 70
